- got the scroller working

--- a/lib/auth2024_web/components/layouts/root.html.heex
+++ b/lib/auth2024_web/components/layouts/root.html.heex
@@ -12,7 +12,7 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-white antialiased h-dvh flex flex-col justify-stretch">
+  <body class="bg-white antialiased max-h-dvh h-dvh flex flex-col justify-stretch">
     <ul class="flex-none relative z-10 flex items-center gap-4 p-0 sm:px-6 lg:px-8 justify-end">
       <%= if @current_user do %>
         <li class="w-4"></li>
