--- a/lib/auth2024_web/components/layouts/root.html.heex
+++ b/lib/auth2024_web/components/layouts/root.html.heex
@@ -16,8 +16,13 @@
     <ul class="flex-none relative z-10 flex items-center gap-4 p-0 sm:px-6 lg:px-8 justify-end">
       <%= if @current_user do %>
         <li class="w-4"></li>
-        <li class="text-xs leading-5 text-gray-600">
-          <%= @current_user.email %>
+        <li>
+          <.link
+            href={~p"/"}
+            class="text-xs leading-5 text-gray-600 font-semibold hover:text-zinc-700"
+          >
+            Todos<span class="font-medium text-gray-400"> of <%= @current_user.email %></span>
+          </.link>
         </li>
         <li>
           <.link
