- a lot of visual changes

--- a/lib/auth2024_web/live/list_item_caption_live.html.heex
+++ b/lib/auth2024_web/live/list_item_caption_live.html.heex
@@ -22,11 +22,11 @@
     </form>
   <% else %>
     <label 
-      class="flex-1 font-semibold text-sm margin-1 text-nowrap" 
+      class="flex-1 font-semibold text-slate-900 text-m margin-1 text-nowrap" 
       phx-click="edit-item-caption"
       phx-target={@myself}
       phx-value-item_id={@item.id}
-    >
+    >sdf
       <%= @item.caption %>
     </label>
   <% end %>
