--- a/lib/auth2024_web/components/layouts/root.html.heex
+++ b/lib/auth2024_web/components/layouts/root.html.heex
@@ -21,7 +21,7 @@
             href={~p"/"}
             class="text-xs leading-5 text-gray-600 font-semibold hover:text-zinc-700"
           >
-            Todos<span class="font-medium text-gray-400"> of <%= @current_user.email %></span>
+            Todos<!-- span class="font-medium text-gray-400"> of <%= @current_user.email %></span -->
           </.link>
         </li>
         <li>
