- still more layout problems.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,5 +6,6 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities"; 
 
+[hidden] { display: none !important; } 
 
 /* This file is for your main application CSS */
