--- a/lib/auth2024_web/live/confirm_new_person_live.html.heex
+++ b/lib/auth2024_web/live/confirm_new_person_live.html.heex
@@ -1,4 +1,4 @@
-<div id={"confirm_new_person_top-#{@id}"}>
+<div id={"confirm_new_person_top-#{@id}"} class="top-2 right-2 fixed z-30">
   <Auth2024Web.CoreComponents.modal 
     id={"confirm_new_person_modal-#{@id}"}
     phx-hook="ModalCloser"
