- workaround to prevent scrolling

--- a/lib/auth2024_web/components/layouts/app.html.heex
+++ b/lib/auth2024_web/components/layouts/app.html.heex
@@ -1,7 +1,7 @@
 <header class="flex-none px-4 sm:px-6 lg:px-8">
 </header>
-<main class="min-h-0 flex-1 flex justify-stretch">
-  <div class="min-h-0 mx-auto md:max-w-xl flex-1 flex flex-col  justify-stretch">
+<main class="min-h-0 flex-1 flex flex-col justify-stretch">
+  <div class="min-h-0 mx-auto flex-1 flex flex-col justify-stretch">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
   </div>
