--- a/lib/auth2024_web/components/layouts/root.html.heex
+++ b/lib/auth2024_web/components/layouts/root.html.heex
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="h-vh [scrollbar-gutter:stable]" style="height: -webkit-fill-available;">
+<html 
+  lang="en" 
+  class="h-vh [scrollbar-gutter:stable]" 
+  style="width: 100%; height: 100vh; max-width: 100%; max-height: 100vh;"
+>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,7 +16,10 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-white antialiased h-vh flex flex-col justify-stretch" style="height: -webkit-fill-available;">
+  <body 
+    class="bg-white antialiased flex flex-col justify-stretch" 
+    style="width: 100%; max-width: 100%; max-height: 100vh;"
+  >
     <ul class="flex-none relative z-10 flex items-center gap-4 p-0 sm:px-6 lg:px-8 justify-end">
       <%= if @current_user do %>
         <li class="w-4"></li>
