- looks acceptable on mobile, even if this is due to a workaround.

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -7,7 +7,7 @@
 />
 
 <section class="mt-2 min-h-0 flex-1 flex flex-col justify-stretch">
-  <ul role="list" class="flex flex-col divide-y divide-gray-100 flex-none">
+  <ul role="list" class="min-h-0 flex flex-col divide-y divide-gray-100 flex-none">
     <li class="flex flex-row">
       <div class="w-8 flex-none">
       </div>
