--- a/lib/auth2024_web/components/layouts/root.html.heex
+++ b/lib/auth2024_web/components/layouts/root.html.heex
@@ -2,7 +2,7 @@
 <html 
   lang="en" 
   class="h-vh [scrollbar-gutter:stable]" 
-  style="width: 100%; height: 100vh; max-width: 100%; max-height: 100vh;"
+  style="width: 100%; -webkit-fill-available; max-width: 100%; -webkit-fill-available;"
 >
   <head>
     <meta charset="utf-8" />
@@ -18,7 +18,7 @@
   </head>
   <body 
     class="bg-white antialiased flex flex-col justify-stretch" 
-    style="width: 100%; max-width: 100%; max-height: 100vh;"
+    style="width: 100%; max-width: 100%; height:100dvh; max-height: 500dvh, -webkit-fill-available;"
   >
     <ul class="flex-none relative z-10 flex items-center gap-4 p-0 sm:px-6 lg:px-8 justify-end">
       <%= if @current_user do %>
