--- a/lib/auth2024_web/components/layouts/root.html.heex
+++ b/lib/auth2024_web/components/layouts/root.html.heex
@@ -17,10 +17,10 @@
     </script>
   </head>
   <body 
-    class="bg-white antialiased flex flex-col justify-stretch" 
+    class="bg-white antialiased flex flex-col" 
     style="width: 100dvw; max-width: 100dvw; min-width: 100dvw; height:100dvh; min-height: 100dvh; max-height: 100dvh;"
   >
-    <ul class="flex-none relative z-10 flex items-center gap-4 p-0 sm:px-6 lg:px-8 justify-end">
+    <ul class="flex-none relative z-10 flex flex-row items-center gap-4 p-0 sm:px-6 lg:px-8 justify-end">
       <%= if @current_user do %>
         <li class="w-4"></li>
         <li>
