- another try fixing the layout.

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -104,8 +104,8 @@
     <!-- This one to stretch to full screen height -->
     <div class="flex-1">&nbsp;</div>
   </section>
-  <footer class="flex-none">
-    <div>
+  <footer class="flex-none flex flex-col">
+    <div class="flex-none flex flex-col">
       <ul class="flex text-sm font-sm text-center text-gray-500 border-t border-gray-200 dark:border-gray-700 dark:text-gray-400">
         <li class="flex-grow-1">
           <.link 
