- included code that formerly was commented out.

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -119,7 +119,7 @@
             active
           </.link>
         </li>
-        <!-- li class="flex-grow-1">
+        <li class="flex-grow-1">
           <.link 
             class={
               ["inline-block", "p-4", "rounded-t-lg", "hover:text-gray-600", "hover:bg-gray-50", "dark:hover:bg-gray-800", "dark:hover:text-gray-300"]
@@ -140,7 +140,7 @@
           >
             by&nbsp;date
           </.link>
-        </li -->
+        </li>
         <li class="flex-grow-1">
           <.link 
             class={
