--- a/lib/auth2024_web/live/list_item_caption_live.html.heex
+++ b/lib/auth2024_web/live/list_item_caption_live.html.heex
@@ -24,7 +24,7 @@
   <% else %>
     <label 
       class="w-48 flex-0 font-semibold text-slate-900 text-m p-0 margin-none text-nowrap text-ellipsis overflow-hidden" 
-      phx-click="edit-item-caption"
+      phx-click="click-item"
       phx-target={@myself}
       phx-value-item_id={@item.id}
     >
