--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -164,3 +164,10 @@
   user={@current_user}
 />
 
+<.live_component
+  id="edit-todo"
+  module={Auth2024Web.EditTodoLive}
+  onperson="edit_new_person_onperson"
+  user={@current_user}
+/>
+
