--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -167,7 +167,7 @@
 <.live_component
   id="edit-todo"
   module={Auth2024Web.EditTodoLive}
-  onperson="edit_new_person_onperson"
+  onitem="edit_todo_onitem"
   user={@current_user}
 />
 
